--- a/index.html
+++ b/index.html
@@ -62,6 +62,15 @@
       font-size: 14px;
     }
   </style>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y5RTGFKKZ1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Y5RTGFKKZ1');
+</script>
 </head>
 <body>
   <div class="header">
@@ -101,3 +110,4 @@
   </div>
 </body>
 </html>
+
